# kgo

./: CMakeLists.txt  LICENSE  README.md
game/: CMakeLists.txt
game/src/main/resources/: assets.qrc
game/src/main/sources/go/: BoardConstants.cpp  BoardConstants.hpp  GoPoint.cpp  GoPoint.hpp  Size.hpp
game/src/main/sources/gui/: Board.cpp  Board.hpp  GuiBoard.cpp  GuiBoard.hpp  MainWindow.cpp  MainWindow.hpp
game/src/main/sources/kgo/: KGoApplication.cpp  KGoApplication.hpp
game/src/main/sources/models/: BoardModel.cpp  BoardModel.hpp  IBoardModel.hpp
game/src/main/sources/renderers/: BoardRenderer.cpp  BoardRenderer.hpp  IRenderer.hpp  NullRenderer.hpp
game/src/main/sources/services/: GuiService.cpp  GuiService.hpp
